# mergereq

./: .gitignore  .mergereqrc.toml  Cargo.toml  README.md  SHASUM256.txt  build_js.sh  publish.sh
mjs/: .gitignore  SHASUM256.txt  index.js  package.json
src/: branches.rs  configs.rs  create_mr.rs  error.rs  helpers.rs  lib.rs  ls.rs  main.rs  merge_requests.rs  projects.rs  users.rs
src/api/: branches.rs  error.rs  merge_requests.rs  mod.rs  projects.rs  tests.rs  users.rs  utils.rs
src/args/: __cfg.yml  args_defs.rs  cfg.yml  defs.rs  matches.rs  mod.rs  names.rs
