[package]
name = "gitlabapi"
version = "0.1.0"
authors = ["mz"]
edition = "2018"


[[bin]]
name = "mergereq"
path = "src/bin/mergereq.rs"


[dependencies]
serde = "1.0.102"
serde_json = "1.0.41"
toml = "0.5.5"
failure = "0.1.6"
reqwest = "0.9.22"
prettytable-rs = "0.8.0"
directories = "2.0.2"
percent-encoding = "2.1.0"
dialoguer = "*"
clap = {version = "~2.27.0", features = ["yaml"]}
