[package]
name = "mergereq"
version = "0.1.9"
authors = ["mz"]
edition = "2018"
description = "CLI for Gitlab merge requests & more"
license-file = "LICENSE"
homepage = "https://github.com/emgyrz/mergereq"
repository = "https://github.com/emgyrz/mergereq.git"
keywords = ["git", "gitlab", "merge", "requests"]
categories = [ "command-line-interface", "development-tools"]
readme = "README.md"



[dependencies]
serde = "1.0.103"
serde_json = "1.0.42"
toml = "0.5.5"
failure = "0.1.6"
reqwest = "0.9.22"
prettytable-rs = "0.8.0"
directories = "2.0.2"
percent-encoding = "2.1.0"
clap = {version = "2.33.0", features = ["yaml"]}
